syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Grpc.Protos.Storages";

package Grpc.Protos.Storages;


message QueryErrorResult {
    string error_message = 1;
    bool is_successed = 2;
}

message QueryStringIdResult {
    oneof query_result {
        string success_value_id = 1;
        QueryErrorResult failure_value = 2;
    }
}

message QueryIntIdResult {
    oneof query_result {
        int32 success_value_id = 1;
        QueryErrorResult failure_value = 2;
    }
}

message AddProductToStorageRequest {
	string marketplace_product_id = 1;
	int32 storage_id = 2;
}

message AddProductToStorageResponse {
	string marketplace_product_id = 1;
	int32 storage_id = 2;
}
